# coherence-engine

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  COHERENCE_ENGINE_CONTINUATION_PROMPT.txt  COHERENCE_ENGINE_PROJECT_STATUS.txt  Dockerfile  Makefile  README.md  SETUP.md  __init__.py  __main__.py  alembic.ini  app.py  cli.py  config.py  gui.py  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: chat-execution-delegation-safety.mdc  chat-force-parallel-triggers.mdc  chat-ownership-map-required.mdc  chat-parallel-delegation.mdc
.github/: codeql.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  oncall-live-drill-followup.yml
.github/workflows/: ci.yml  deploy-preflight-gate.yml  founder_portal.yml  governance-attestation-trend-aggregation.yml  migrations.yml  nonprod-release-smoke.yml  oncall-evidence-exception-approval.yml  oncall-route-verification.yml  oncall-tracker-handoff-governance-report.yml  partner_dashboard.yml  provider-policy-matrix.yml  release.yml  reusable-governance-attestation-check.yml  secret-manager-staging-integration.yml  site.yml  uncertainty-attestation-lifecycle.yml  uncertainty-policy-governance-verification.yml  uncertainty-promotion-gate.yml  uncertainty-recalibration.yml  uncertainty-rollback-verification.yml  vercel_platform.yml
Experiments/: __init__.py
Experiments/Contradiction_Direction_Stability/: __init__.py  preregistration.yaml  run_stability_study.py
Experiments/Cosine_Paradox_Replication/: __init__.py  expected_report.json  preregistration.yaml  run_replication.py
Experiments/Hoyer_vs_Cosine/: __init__.py  preregistration.yaml  run_comparison.py
Experiments/Reverse_Marxism_Rigor/: __init__.py  preregistration.yaml  run_rigor_study.py
alembic/: env.py
alembic/versions/: 20260408_000001_create_fund_backend_tables.py  20260409_000002_scoring_queue_and_artifact_fields.py  20260409_000003_api_keys_and_audit.py  20260409_000004_worker_reliability_fields.py  20260417_000001_decision_policy_version.py  20260417_000002_artifact_kind.py  20260417_000003_portfolio_state.py  20260417_000004_scoring_mode.py  20260417_000005_notification_log.py  20260417_000006_workflow_checkpoints.py  20260425_000001_rls_policies.py  20260425_000002_founder_user_id.py  20260425_000003_investor_verification.py  20260425_000004_service_accounts_and_api_keys_v2.py  20260425_000005_decision_overrides.py  20260425_000006_interview_recordings.py  20260425_000007_interview_chunks.py  20260425_000008_interview_session_state.py  20260425_000009_capital_deployment.py  20260425_000010_signature_requests.py  20260425_000011_founder_kyc.py  20260425_000012_scheduling.py  20260425_000013_regulatory_pathway.py  20260425_000014_retention_and_erasure.py  20260425_000015_pii_tokenization.py  20260425_000016_coi_registry.py  20260425_000017_cost_events.py  20260425_000018_cap_table.py  20260425_000019_policy_parameter_proposals.py
apps/founder_portal/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json
apps/lp_portal/: .env.example  .eslintrc.json  README.md  package.json  pnpm-lock.yaml
apps/partner_dashboard/: .env.example  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/site/: .eslintrc.json  .gitignore  README.md  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  vercel.json  vitest.config.ts
artifacts/: release-readiness.json  release-readiness.md
artifacts/examples/: calibration_health_example.json
core/: anti_gaming.py  contradiction_direction.py  delegation.py  explanation.py  parser.py  report.py  scorer.py  transcript_compiler.py  types.py
data/: __init__.py  negation_patterns.json  societal_premises.json
data/governed/: config_audit_report.json  cost_pricing.yaml  feature_flags.yaml  migration_registry.json  regulatory_pathways.yaml  retention_policy.yaml  secret_manifest.yaml  training_artifacts_index.json  uncertainty_governance_policy.json  uncertainty_historical_outcomes.jsonl  uncertainty_historical_outcomes.manifest.json
data/historical_corpus/: manifest.jsonl  outcomes.jsonl
deploy/: README.md
docs/: AUTOMATED_PRESEED_FUND_BLUEPRINT.md  AUTOMATED_PRESEED_PROMPT_LIBRARY.md  IMPLEMENTATION_ROADMAP_AND_BACKLOG.md  PARALLEL_DELEGATION.md  README.md  SECRET_MANAGER_ROTATION_RUNBOOK.md
docs/ops/: chaos.md  (+10 more)
domain/: __init__.py  comparator.py  detector.py  normative.py  ontology.py  premises.py
embeddings/: __init__.py  base.py  sbert.py  tfidf.py  utils.py
installer/: CoherenceEngine.icns  README.txt  generate_icon.py  install.sh
layers/: __init__.py  argumentation.py  compression.py  contradiction.py  embedding.py  structural.py
scripts/: build-installers.command  generate_sdk_stubs.py  generate_ts_sdk.py  render_study_to_mdx.py  sync-to-github.sh
server/: __init__.py  app.py  fund_api.py  fund_models.py
tests/: test_accredited_verification.py  test_admin_dashboard.py  test_anti_gaming.py  test_api_key_auth.py  test_api_key_service_v2.py  test_argumentation.py  test_arq_worker.py  test_backtest.py  test_browser_interview.py  test_c_hat_stability.py  test_calibration_export.py  test_cap_table.py  test_capital_deployment.py  test_ci_workflow_yaml_validity.py  test_cli.py  test_coi.py  test_compression.py  test_contradiction.py  test_cosine_paradox_replication.py  test_cost_telemetry.py  test_crm_sync.py  test_database_dialect_selection.py  test_db_retry_decorator.py  test_decision_artifact.py  test_decision_overrides.py  test_decision_policy_portfolio.py  test_decision_policy_spec.py  test_delegation.py  test_embedding.py  test_erasure_endpoint.py  test_esignature.py  test_event_schemas.py  test_explanation.py  test_feature_flags.py  test_founder_kyc.py  test_fund_backend.py  test_governance_attestation_age_reporter.py  test_governance_attestation_aggregator.py  test_governance_attestation_trend_aggregation_workflow_contract.py  test_governed_historical_dataset.py  (+91 more)
(+502 files in other folders)
